<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ActionBarTabs</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="dog_tab">Dogs</string>
    <string name="cat_tab">Cats</string>
    <string name="bird_tab">Birds</string>
    <string name="snake_tab">Snakes</string>
    <string name="menu_search">Search</string>
    <string name="menu_send">Send</string>
    <string name="menu_add">Add</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_about">About</string>
    <string name="menu_save">Save</string>
    <string name="action_bar">Action Bar with Tabs Example</string>
    <string name="menu_item_share">Share with Other</string>
    <string name="menu_share">Share</string>
    

</resources>
