<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    
    
    <item 
        android:id="@+id/menuitem_save" 
 		android:icon="@android:drawable/ic_menu_save" 
 		android:title="@string/menu_save" 
 		android:showAsAction="always"> 
 	</item> 
 	
 	<item 
 		android:id="@+id/menuitem_search" 
 		android:icon="@android:drawable/ic_menu_search" 
 		android:actionViewClass="android.support.v7.widget.SearchView" 
 		android:showAsAction="always|collapseActionView" 
 		android:title="@string/menu_search"> 
 	</item> 
 	
 	<item 
        android:id="@+id/menuitem_send" 
 		android:icon="@android:drawable/ic_menu_send" 
 		android:title="@string/menu_send" 
 		android:showAsAction="ifRoom"> 
 	</item> 
 	
 	<item 
        android:id="@+id/menuitem_add" 
 		android:icon="@android:drawable/ic_menu_add" 
 		android:title="@string/menu_add" 
 		android:showAsAction="ifRoom"> 
 	</item> 
 	
 	<item 
        android:id="@+id/menuitem_share" 
 		android:icon="@android:drawable/ic_menu_share" 
 		android:title="@string/menu_share" 
 		android:actionProviderClass="android.widget.ShareActionProvider"
 		android:showAsAction="always"> 
 	</item>
 	
 	<item 
        android:id="@+id/menuitem_about" 
 		android:icon="@android:drawable/ic_menu_view" 
 		android:title="@string/menu_about" 
 		android:showAsAction="never"> 
 	</item> 
 	
 	
 	<item 
        android:id="@+id/menuitem_quit" 
 		android:icon="@android:drawable/ic_menu_close_clear_cancel" 
 		android:title="@string/menu_quit" 
 		android:showAsAction="ifRoom"> 
 	</item>
    

</menu>
